# fedbiomed_hackathon

./: .gitignore  Doxyfile  __pyproject_pdm.toml  mkdocs.yml  nw_cli.md  pyproject.toml
docs/tutorials/medical/: medical-image-segmentation-unet-library.ipynb
envs/development/conda/: fedbiomed-gui.yaml  fedbiomed-researcher-macosx.yaml  fedbiomed-researcher.yaml
fedbiomed/: cli.py
fedbiomed/common/: certificate_manager.py  config.py
fedbiomed/common/models/: _sklearn.py
fedbiomed/common/optimizers/: __init__.py  model_optim.py
fedbiomed/common/training_plans/: _base_training_plan.py  _sklearn_models.py  _sklearn_training_plan.py  _torchnn.py
fedbiomed/common/utils/: __init__.py  _config_utils.py
fedbiomed/node/: cli.py  node.py  round.py
fedbiomed/node/secagg/: _secagg_round.py
fedbiomed/researcher/federated_workflows/: _experiment.py
fedbiomed/researcher/federated_workflows/jobs/: _training_job.py
fedbiomed/researcher/secagg/: _secure_aggregation.py
gui/server/: app.py  application.py  config.py  utils.py
notebooks/: declearn-with-pytorch.ipynb
notebooks/shanoir-to-fbm-converter/: poc_shanoir_fdm_converter-poc2.ipynb
poc/flask_user_auth/: app.py  database.py
scripts/: fedbiomed_run
tests/: test_experiment.py  test_job.py  test_node.py  test_round.py
